src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_protected_dans_methode.deca
// Description:
//    tests de programme incorrect class protected
//
// Resultats:
//    Ligne 12 : Erreur (oubli condition)
//    
//
// Historique:
//    cree le 04/01/2023

class A{
    int x = 8;
    void calcul(){
        protected y = 6;
        this.x = y;
    } 
}